--- a/welcome.html.erb
+++ b/welcome.html.erb
@@ -29,19 +29,19 @@
     <div class="flex-col-cent-start">
       <h1 class="m-0 mb-20">WELCOME on Rails</h1>
 
-      <p class="p-small">This Rails app was generated with <%= link_to "ubi-legal-innovation-team/templates", "https://gitlab-ncsa.ubisoft.org/adhuy/templates/-/raw/master/default.rb", target: "_blank", class: "text-underline" %>, created by the <%= link_to "Legal Innovation team", "https://www.legallab.ubisoft.org/crew", target:"_blank", class: "text-blue" %>.</p>
+      <p class="p-small">This Rails app was generated with <%= link_to "ubi-legal-innovation-team/templates", "https://github.com/ubi-legal-innovation-team/templates/blob/master/default.rb", target: "_blank", class: "text-underline" %>, created by the <%= link_to "Legal Innovation team", "https://www.legallab.ubisoft.org/crew", target:"_blank", class: "text-blue" %>.</p>
 
       <p>Below is the list of default configuration files from the generated template :</p>
 
       <ul>
-        <li class="mb-10">the main <a class="text-blue" target="_blank" href="https://gitlab-ncsa.ubisoft.org/adhuy/templates/-/raw/master/default.rb">config file</a></li>
+        <li class="mb-10">the main <a class="text-blue" target="_blank" href="https://github.com/ubi-legal-innovation-team/templates/blob/master/default.rb">config file</a></li>
 
-        <li><%= link_to "rails stylesheets", "https://gitlab-ncsa.ubisoft.org/adhuy/rails-stylesheets", target:"_blank", class: "text-blue" %></li>
-        <li><%= link_to "rails javascripts", "https://gitlab-ncsa.ubisoft.org/adhuy/rails-javascripts", target:"_blank", class: "text-blue" %></li>
-        <li><%= link_to "ubisoft fonts", "https://gitlab-ncsa.ubisoft.org/adhuy/rails-fonts", target:"_blank", class: "text-blue" %></li>
-        <li><%= link_to "ubisoft images", "https://gitlab-ncsa.ubisoft.org/adhuy/rails-images", target:"_blank", class: "text-blue" %></li>
-        <li><%= link_to "rails pages", "https://gitlab-ncsa.ubisoft.org/adhuy/rails-pages", target:"_blank", class: "text-blue" %></li>
-        <li><%= link_to "rails partials", "https://gitlab-ncsa.ubisoft.org/adhuy/rails-partials", target:"_blank", class: "text-blue" %></li>
+        <li><%= link_to "rails stylesheets", "https://github.com/ubi-legal-innovation-team/rails-stylesheets", target:"_blank", class: "text-blue" %></li>
+        <li><%= link_to "rails javascripts", "https://github.com/ubi-legal-innovation-team/rails-javascripts", target:"_blank", class: "text-blue" %></li>
+        <li><%= link_to "ubisoft fonts", "https://github.com/ubi-legal-innovation-team/rails-fonts", target:"_blank", class: "text-blue" %></li>
+        <li><%= link_to "ubisoft images", "https://github.com/ubi-legal-innovation-team/rails-images", target:"_blank", class: "text-blue" %></li>
+        <li><%= link_to "rails pages", "https://github.com/ubi-legal-innovation-team/rails-pages", target:"_blank", class: "text-blue" %></li>
+        <li><%= link_to "rails partials", "https://github.com/ubi-legal-innovation-team/rails-partials", target:"_blank", class: "text-blue" %></li>
       </ul>
     </div>
 
