add Ruby on Rails img

--- a/welcome.html.erb
+++ b/welcome.html.erb
@@ -27,7 +27,8 @@
   <div class="flex-col-bet m-0-auto p-10">
 
     <div class="flex-col-cent-start">
-      <h1 class="m-0 mb-20">WELCOME on Rails</h1>
+      <%= image_tag 'partners/Ruby_on_Rails-logo.png', width: "50px" %>
+      <h1>WELCOME on Rails</h1>
 
       <p class="p-small">This Rails app was generated with <%= link_to "ubi-legal-innovation-team/templates", "https://github.com/ubi-legal-innovation-team/templates/blob/master/default.rb", target: "_blank", class: "text-underline" %>, created by the <%= link_to "Legal Innovation team", "https://www.legallab.ubisoft.org/crew", target:"_blank", class: "text-blue" %>.</p>
 
