--- a/welcome.html.erb
+++ b/welcome.html.erb
@@ -47,7 +47,7 @@
     </div>
 
     <div class="text-right">
-      <%= link_to "start coding", home_path, class: "border-black p-10 radius-05" %>
+      <%= link_to "start on Rails", home_path, class: "border-black p-10 radius-05" %>
     </div>
 
   </div>
