--- a/welcome.html.erb
+++ b/welcome.html.erb
@@ -2,6 +2,12 @@
 
   <div  class="flex-col p-small w-quart pt-10 pr-20 border-right grey">
 
+    <strong>Versions management</strong>
+
+    <ul>
+      <li class="mb-05">v1.0.0 : first launch and deployment on [SERVICE] [(MM, YYYY)]</li>
+    </ul>
+
     <strong>Your current version of <span class="text-red">ruby</span> is <%= RUBY_VERSION %>.</strong>
     <span class="mt-10">to update it run the following commands :</span>
     <ul>
@@ -32,17 +38,16 @@
 
       <p class="p-small">This Rails app was generated with <%= link_to "ubi-legal-innovation-team/templates", "https://github.com/ubi-legal-innovation-team/templates/blob/master/default.rb", target: "_blank", class: "text-underline" %>, created by the <%= link_to "Legal Innovation team", "https://www.legallab.ubisoft.org/crew", target:"_blank", class: "text-blue" %>.</p>
 
-      <p>Below is the list of default configuration files from the generated template :</p>
+      <p>Below is the list of the default configuration files from the generated template :</p>
 
       <ul>
-        <li class="mb-10">the main <a class="text-blue" target="_blank" href="https://github.com/ubi-legal-innovation-team/templates/blob/master/default.rb">config file</a></li>
-
-        <li><%= link_to "rails stylesheets", "https://github.com/ubi-legal-innovation-team/rails-stylesheets", target:"_blank", class: "text-blue" %></li>
-        <li><%= link_to "rails javascripts", "https://github.com/ubi-legal-innovation-team/rails-javascripts", target:"_blank", class: "text-blue" %></li>
-        <li><%= link_to "ubisoft fonts", "https://github.com/ubi-legal-innovation-team/rails-fonts", target:"_blank", class: "text-blue" %></li>
-        <li><%= link_to "ubisoft images", "https://github.com/ubi-legal-innovation-team/rails-images", target:"_blank", class: "text-blue" %></li>
-        <li><%= link_to "rails pages", "https://github.com/ubi-legal-innovation-team/rails-pages", target:"_blank", class: "text-blue" %></li>
-        <li><%= link_to "rails partials", "https://github.com/ubi-legal-innovation-team/rails-partials", target:"_blank", class: "text-blue" %></li>
+        <li class="mb-10"><%= link_to "rails config file", "https://github.com/ubi-legal-innovation-team/templates/blob/master/default.rb", target:"_blank", class: "text-electric-blue" %>
+        <li class="mb-10"><%= link_to "rails stylesheets", "https://github.com/ubi-legal-innovation-team/rails-stylesheets", target:"_blank", class: "text-blue" %></li>
+        <li class="mb-10"><%= link_to "rails javascripts", "https://github.com/ubi-legal-innovation-team/rails-javascripts", target:"_blank", class: "text-blue" %></li>
+        <li class="mb-10"><%= link_to "ubisoft fonts", "https://github.com/ubi-legal-innovation-team/rails-fonts", target:"_blank", class: "text-blue" %></li>
+        <li class="mb-10"><%= link_to "ubisoft images", "https://github.com/ubi-legal-innovation-team/rails-images", target:"_blank", class: "text-blue" %></li>
+        <li class="mb-10"><%= link_to "rails pages", "https://github.com/ubi-legal-innovation-team/rails-pages", target:"_blank", class: "text-blue" %></li>
+        <li class="mb-10"><%= link_to "rails partials", "https://github.com/ubi-legal-innovation-team/rails-partials", target:"_blank", class: "text-blue" %></li>
       </ul>
     </div>
 
