--- a/welcome.html.erb
+++ b/welcome.html.erb
@@ -3,6 +3,9 @@
   <div  class="flex-col p-small w-quart pt-10 pr-20 scrollable h-500">
 
     <strong>Versions management</strong>
+    <ul class="border-bottom light-grey pb-15">
+      <li><u>v1.0.0</u> : XXX <span class="text-grey">(<%= Date.today.strftime("%B") %>, <%= Date.today.year %>)</span></li>
+    </ul>
 
     <strong>Your current version of <span class="text-red">ruby</span> is <%= RUBY_VERSION %>.</strong>
     <span class="mt-10">to update it run the following in your terminal :</span>
