--- a/welcome.html.erb
+++ b/welcome.html.erb
@@ -1,4 +1,4 @@
-<section class="flex pt-150">
+<section id="welcome" class="flex pt-200">
 
   <div  class="flex-col p-small w-quart pt-10 pr-20 scrollable h-500">
 
