--- a/welcome.html.erb
+++ b/welcome.html.erb
@@ -32,7 +32,7 @@
       <p class="p-rp-small">The current version of <span class="text-red">Rails</span> is <%= Rails.version %></p>
     </div>
 
-    <%= link_to "E N T E R", home_path, class: "e-blue-btn small" %>
+    <%= link_to "E N T E R", home_path %>
   </div>
 
 </section>
