--- a/welcome.html.erb
+++ b/welcome.html.erb
@@ -7,7 +7,7 @@
       <h1 class="m-0">Welcome on Rails <%= current_user.first_name %></h1>
     </div>
 
-    <div class="maxw-600 mb-50 p-10">
+    <div class="max-w-600 mb-50 p-10">
       <%= svg('ubisoft_gear_30') %>
       <h3>Configuration files</h3>
 
@@ -16,7 +16,7 @@
       </p>
     </div>
 
-    <div class="maxw-600 mb-50 p-10">
+    <div class="max-w-600 mb-50 p-10">
       <%= svg('ubisoft_rocket_30') %>
       <h3>Versions management (v.2.3.0)</h3>
 
@@ -25,7 +25,7 @@
       </ul>
     </div>
 
-    <div class="maxw-600 mb-100 p-10">
+    <div class="max-w-600 mb-100 p-10">
       <%= svg('ubisoft_home_30') %>
       <h3>Current application</h3>
       <p class="p-rp-small">The current version of <span class="text-red">ruby</span> is <%= RUBY_VERSION %>.</p>
